--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@ project("LearnOpenCV")
 
 add_subdirectory("Chapter 1")
 add_subdirectory("Chapter 2")
-# add_subdirectory("Chapter 1")
-# add_subdirectory("Chapter 1")
-# add_subdirectory("Chapter 1")
-# add_subdirectory("Chapter 1")
+add_subdirectory("Chapter 3")
+add_subdirectory("Chapter 4")
+add_subdirectory("Chapter 5")
+add_subdirectory("Chapter 6")
