--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,3 +8,4 @@ add_subdirectory("Chapter 3")
 add_subdirectory("Chapter 4")
 add_subdirectory("Chapter 5")
 add_subdirectory("Chapter 6")
+add_subdirectory("Chapter 7")
